--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.2
+Date: 29NOV2021
+  Changes:
+    - release correct version 
+---------------------------------------------------------------------------------------------------
 Version: 0.0.1
-Date: 28NOV2021
+Date: 29NOV2021
   Changes:
     - initial release on mod portal
