--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.4
+Date: TBD
+  Changes:
+    - updated license
+---------------------------------------------------------------------------------------------------
 Version: 0.0.3
 Date: 30JAN2022
   Changes:
