--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version: 0.0.4
 Date: TBD
   Changes:
     - updated license
+    - removed info icons from mod setting names since base game now adds them automatically
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.3
 Date: 30JAN2022
