--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.0
+Date: 30JAN2022
+  Changes:
+    - added support for Factorio 2.0
+---------------------------------------------------------------------------------------------------
 Version: 0.0.3
 Date: 30JAN2022
   Changes:
