--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.0
-Date: DDMMMYYYY
+Date: 05MAR2025
   Changes:
     - added support for Factorio 2.0
     - added pride and country flag color themes
